@@ -21,6 +21,7 @@
 /* End PBXAggregateTarget section */
 
 /* Begin PBXBuildFile section */
+		780D09F00C2F2C20007C0F4F /* splitter.rb in Resources */ = {isa = PBXBuildFile; fileRef = 780D09EF0C2F2C20007C0F4F /* splitter.rb */; };
 		7821DBDE0C2C84EA00B3EF42 /* PasteSheet.nib in Resources */ = {isa = PBXBuildFile; fileRef = 7821DBDC0C2C84EA00B3EF42 /* PasteSheet.nib */; };
 		7821DBE40C2C875700B3EF42 /* pastesheet.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7821DBE30C2C875700B3EF42 /* pastesheet.rb */; };
 		78229BC20C288188001DD4C3 /* asynctcpclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229B900C288188001DD4C3 /* asynctcpclient.rb */; };
@@ -81,7 +82,6 @@
 		78E5723E0C1C30C300BDF7EC /* AsyncSocket.m in Sources */ = {isa = PBXBuildFile; fileRef = 786926F30BB6EC1B0081019B /* AsyncSocket.m */; };
 		78E5723F0C1C30C300BDF7EC /* main.m in Sources */ = {isa = PBXBuildFile; fileRef = 786926F40BB6EC1B0081019B /* main.m */; };
 		78E572400C1C30C300BDF7EC /* LogEventSinkBase.m in Sources */ = {isa = PBXBuildFile; fileRef = 78189D1C0BB8D4A500AC17B2 /* LogEventSinkBase.m */; };
-		78E572410C1C30C300BDF7EC /* Splitter.m in Sources */ = {isa = PBXBuildFile; fileRef = 783A3AA70BC8CB2000FD455A /* Splitter.m */; };
 		78E572420C1C30C300BDF7EC /* GradientFill.m in Sources */ = {isa = PBXBuildFile; fileRef = 7804271D0BCA810600C14486 /* GradientFill.m */; };
 		78E572430C1C30CE00BDF7EC /* MainMenu.nib in Resources */ = {isa = PBXBuildFile; fileRef = 29B97318FDCFA39411CA2CEA /* MainMenu.nib */; };
 		78E572440C1C30CE00BDF7EC /* InfoPlist.strings in Resources */ = {isa = PBXBuildFile; fileRef = 089C165CFE840E0CC02AAC07 /* InfoPlist.strings */; };
@@ -104,6 +104,7 @@
 		780253C20C09525900C170D4 /* CoreServices.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = CoreServices.framework; path = /System/Library/Frameworks/CoreServices.framework; sourceTree = "<absolute>"; };
 		7804271C0BCA810600C14486 /* GradientFill.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = GradientFill.h; path = objc/GradientFill.h; sourceTree = "<group>"; };
 		7804271D0BCA810600C14486 /* GradientFill.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = GradientFill.m; path = objc/GradientFill.m; sourceTree = "<group>"; };
+		780D09EF0C2F2C20007C0F4F /* splitter.rb */ = {isa = PBXFileReference; fileEncoding = "-2147483647"; lastKnownFileType = text.script.ruby; path = splitter.rb; sourceTree = "<group>"; };
 		7817A0390BF6FFCD005C7737 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/DccDialog.nib; sourceTree = "<group>"; };
 		78189D1B0BB8D4A500AC17B2 /* LogEventSinkBase.h */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = sourcecode.c.h; name = LogEventSinkBase.h; path = objc/LogEventSinkBase.h; sourceTree = "<group>"; };
 		78189D1C0BB8D4A500AC17B2 /* LogEventSinkBase.m */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = sourcecode.c.objc; name = LogEventSinkBase.m; path = objc/LogEventSinkBase.m; sourceTree = "<group>"; };
@@ -146,8 +147,6 @@
 		78229BBF0C288188001DD4C3 /* tableprogressindicator.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = tableprogressindicator.rb; sourceTree = "<group>"; };
 		78229BC00C288188001DD4C3 /* treeview.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = treeview.rb; sourceTree = "<group>"; };
 		78229BC10C288188001DD4C3 /* unitnamecell.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = unitnamecell.rb; sourceTree = "<group>"; };
-		783A3AA60BC8CB2000FD455A /* Splitter.h */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = sourcecode.c.h; name = Splitter.h; path = objc/Splitter.h; sourceTree = "<group>"; };
-		783A3AA70BC8CB2000FD455A /* Splitter.m */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = sourcecode.c.objc; name = Splitter.m; path = objc/Splitter.m; sourceTree = "<group>"; };
 		78496EF90C288B070084A836 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/PreferenceDialog.nib; sourceTree = "<group>"; };
 		78496EFC0C2890200084A836 /* preferencedialog.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = preferencedialog.rb; sourceTree = "<group>"; };
 		7867EA4A0C227AD40017B510 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/NickSheet.nib; sourceTree = "<group>"; };
@@ -347,6 +346,7 @@
 		78229BB80C288188001DD4C3 /* view */ = {
 			isa = PBXGroup;
 			children = (
+				780D09EF0C2F2C20007C0F4F /* splitter.rb */,
 				78B063520C2BD19D00CDD242 /* singlelineformatter.rb */,
 				78755D720C2AC0B30073FF42 /* logrenderer.rb */,
 				78229BB90C288188001DD4C3 /* chatbox.rb */,
@@ -365,8 +365,6 @@
 		786927470BB6EE130081019B /* objc */ = {
 			isa = PBXGroup;
 			children = (
-				783A3AA60BC8CB2000FD455A /* Splitter.h */,
-				783A3AA70BC8CB2000FD455A /* Splitter.m */,
 				78189D1B0BB8D4A500AC17B2 /* LogEventSinkBase.h */,
 				78189D1C0BB8D4A500AC17B2 /* LogEventSinkBase.m */,
 				786926F20BB6EC1B0081019B /* AsyncSocket.h */,
@@ -510,6 +508,7 @@
 				78AF96580C2C219A006D9E4D /* inputhistory.rb in Resources */,
 				7821DBDE0C2C84EA00B3EF42 /* PasteSheet.nib in Resources */,
 				7821DBE40C2C875700B3EF42 /* pastesheet.rb in Resources */,
+				780D09F00C2F2C20007C0F4F /* splitter.rb in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -539,7 +538,6 @@
 				78E5723E0C1C30C300BDF7EC /* AsyncSocket.m in Sources */,
 				78E5723F0C1C30C300BDF7EC /* main.m in Sources */,
 				78E572400C1C30C300BDF7EC /* LogEventSinkBase.m in Sources */,
-				78E572410C1C30C300BDF7EC /* Splitter.m in Sources */,
 				78E572420C1C30C300BDF7EC /* GradientFill.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
