@@ -1,5 +1,9 @@
 2007-06-25  Satoshi Nakagawa <artension@gmail.com>
 
+	Ported Splitter to ruby.
+
+2007-06-25  Satoshi Nakagawa <artension@gmail.com>
+
 	Released 0.2.
 
 2007-06-23  Satoshi Nakagawa <artension@gmail.com>
